--- a/src/include/footer.html
+++ b/src/include/footer.html
@@ -132,6 +132,24 @@
     <symbol id="icon-breadcrumb" viewBox="0 0 32 32">
       <path d="M32 16c0 8.837-7.163 16-16 16s-16-7.163-16-16c0-8.837 7.163-16 16-16s16 7.163 16 16z"></path>
     </symbol>
+    <symbol id="icon-link-external" viewBox="0 0 37 32">
+      <path d="M34.933 22.933h-25.6v-21.333h2.667v18.667h20.267v-18.667h2.667z"></path>
+      <path d="M12 7.2v-4.267h21.333v4.267h-21.333z"></path>
+      <path d="M34.4 8.533h-23.733v-6.933h24v6.933zM13.333 5.867h18.667v-1.6h-18.667v1.6z"></path>
+      <path d="M27.467 29.6h-25.6v-21.067h2.667v18.4h20.267v-2.133h2.667z"></path>
+      <path d="M4.533 14.133v-4.267h1.6v4.267h-1.6z"></path>
+      <path d="M3.2 8.533h4.267v6.933h-4.267v-6.933z"></path>
+    </symbol>
+    <symbol id="icon-link-inside" viewBox="0 0 34 32">
+        <path d="M28.308 29.785h-27.569v-22.892h2.462v20.431h22.646v-10.831h2.462z"></path>
+        <path d="M3.2 13.292v-5.169h12.8v5.169h-12.8z"></path>
+        <path d="M17.231 14.523h-15.262v-7.631h15.262v7.631zM4.431 12.062h10.338v-2.708h-10.338v2.708z"></path>
+        <path d="M19.544 15.171l12.199-12.515 1.763 1.718-12.199 12.515-1.763-1.718z"></path>
+        <path d="M32 9.846l-0.246-5.908h-5.908v-2.462h8.369l0.246 8.369z"></path>
+    </symbol>
+    <symbol id="icon-arrow-left" viewBox="0 0 27 32">
+      <path d="M26.057 30.171v-28.343l-25.371 14.171 25.371 14.171z"></path>
+    </symbol>
   </defs>
 </svg>
 
